--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@ignite-design-ui/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "start-storybook -p 6006",
-    "deploy-storybook": "storybook-to-ghpages", 
+    "deploy-storybook": "storybook-to-ghpages",
     "build": "build-storybook"
   },
   "keywords": [],
@@ -27,10 +27,10 @@
     "vite": "^3.1.6"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@ignite-design-ui/eslint-config": "*",
+    "@ignite-design-ui/react": "*",
+    "@ignite-design-ui/tokens": "*",
+    "@ignite-design-ui/ts-config": "*",
     "@storybook/addon-a11y": "^6.5.12",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
